<resources>
    <string name="app_name">Capstone2</string>
    <string name="login_title">회원 로그인</string>
    <string name="login">로그인</string>
    <string name="signup_title">회원 가입</string>
    <string name="signup">회원가입</string>
    <string name="id">아이디</string>
    <string name="id_blank">  아이디</string>
    <string name="pw">비밀번호</string>
    <string name="pw_blank">  비밀번호</string>
    <string name="name">이름</string>
    <string name="name_blank">  이름</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_blank">  닉네임</string>
    <string name="pw_check">비밀번호 확인</string>
    <string name="pw_check_blank">  비밀번호 다시 입력</string>
    <string name="ok">확인</string>
    <string name="mail">이메일</string>
    <string name="mail_blank">  이메일</string>
    <string name="phone">전화번호</string>
    <string name="phone_blank">  전화번호</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>