<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/signup_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:text="@string/signup_title"
            android:textSize="25sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/signup_id_text"
                android:text="@string/id"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/signup_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/id_blank"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text=""
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/signup_pw_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/pw"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/signup_pw"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/pw_blank"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:text="" />

            <TextView
                android:id="@+id/signup_pw_check_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/pw_check"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/signup_pw_check_edit"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/pw_check_blank"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:text="" />
                <Button
                    android:id="@+id/signup_pw_check_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:id="@+id/signup_pw_check_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text=""/>

            <TextView
                android:id="@+id/signup_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/name_blank"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text=""
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/signup_nickname_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/nickname"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/signup_nickname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/nickname_blank"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text=""
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/signup_mail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/mail"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/signup_mail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/mail_blank"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:text=""
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/signup_phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/phone"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/signup_phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/phone_blank"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text=""
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>