<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:text="@string/login_title"
        android:textStyle="bold"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/login_id"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:hint="@string/id_blank"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/login_pw"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/pw_blank"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text="" />
    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/login" />
    <TextView
        android:id="@+id/login_signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:text="@string/signup"
        android:textSize="15sp"/>

</LinearLayout>